# ShrimpFryKing

./: .gitignore  README.md  common.json  main.py  package-lock.json  package.json
backend/: .gitignore  agora.db  app.py  db.py  main.py  pyproject.toml  test.py  testdb.py
backend/categorizer/: article_classifier.py  gemini_classifier.py
backend/crawling/: article_extractor.py
backend/db/: DBservice.py  db.py  entity.py  poco_data.py
backend/routers/: comment_router.py  middlewares.py  news_router.py  user_router.py
backend/routers/dto/: comment_dto.py  news_dto.py
backend/services/: news_service.py  user_service.py
backend/services/comment_service/: get_comment_summary.py  post_comment.py  post_comment_like.py
backend/services/news_service/: create_news.py  get_news.py  get_news_by_id.py  like_news.py
backend/summarizer/: gemini_summary.py
backend/utils/: article.py  convert_type.py
frontend/: .projects  package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.css  App.js  App.test.js  CommentSection.css  CommentSection.js  LoginPage.js  NewsDetailPage.js  RegisterPage.js  WritePage.js  constants.js
frontend/src/apis/: getNewsList.js
frontend/src/components/: Header.js  NewsCard.js  Pagination.js  ThemeCard.js
frontend/src/hooks/: useArticles.js  useClickOutside.js
frontend/src/pages/: LatestPage.js  MainPage.js  PopularPage.js  ThemePage.js
frontend/src/services/: articleService.js
frontend/src/utils/: articleUtils.js
